# simiir-studio

./: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  COMMANDS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
examples/: api_usage.py  example_simulation_config.xml  test_with_real_config.py
src/simiir_api/: __init__.py  config.py  database.py  main.py
src/simiir_api/api/: __init__.py  simulations.py
src/simiir_api/models/: __init__.py  simulation.py
src/simiir_api/schemas/: __init__.py  simulation.py
src/simiir_api/services/: __init__.py  simulation_manager.py
src/simiir_api/utils/: __init__.py  xml_config_manager.py
tests/: __init__.py  test_api.py
